# ros2_moving_object

./: README.md
moving_object/: CMakeLists.txt  package.xml
moving_object/include/moving_object/: moving_object_ros.hpp  moving_objects.hpp  object_frame.hpp  param.hpp  remap.hpp
moving_object/param/: moving_object.yaml
moving_object/src/: moving_object.cpp  moving_object_node.cpp  moving_object_ros.cpp  object_frame.cpp  param.cpp
moving_object/tests/: CMakeLists.txt  unittest_moving_object.cpp  unittest_object_frame.cpp
moving_object_msgs/: CMakeLists.txt  package.xml
moving_object_msgs/msg/: MovingObjectStamped.msg  MovingObjectsInFrame.msg  SocialObjectsInFrame.msg
